<resources>
    <string name="app_name">Plantique</string>
    <string name="strOrdConf">"Placed order successfully "</string>
    <string name="strOrdThank">"Your order are processing. Thank you for your order "</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>
    <string name="strTotal">Total</string>
    <string name="strConfirmPayment">Confirm Payment</string>
    <string name="strBackButton">Back</string>
    <string name="strtextStatus">Order Status</string>
    <string name="strOrderDetailsInfo">Order Information</string>
    <string name="strShippingAddress">Shipping Address</string>
    <string name="strPhone">Phone</string>
    <string name="strSubTotal">Sub Total</string>
    <string name="strShipFee">Shipping Fee</string>
    <string name="strPaymentMethod">Payment Method</string>
    <string name="strDiscount">Discount</string>
    <string name="strCancel">Cancel Order</string>
    <string name="strOrdID">Order ID </string>
    <string name="strUserId">User ID</string>
    <string name="strOrder">Order</string>
    <string name="write_review">Write Review</string>
    <string name="how_do_you_feel">How is the order?</string>
    <string name="submit">Submit</string>
    <string name="strNote">Note</string>
    <string name="strDeliveryInfo">Delivery Information</string>
    <string name="strFullName">Full Name</string>
    <string name="strCIty">City/Province\n</string>
    <string name="strWard">Ward</string>
    <string name="strDistrict">District</string>
    <string name="strAddress">"Address (House number, Street,...) "</string>
    <string name="strReceviedConf">"Confirm Received"</string>
    <string name="strYes">Yes</string>
    <string name="strNo">No</string>
    <string name="strReceivedMes">"Do you confirm that you have received the order correctly?"</string>
    <string name="order_incomplete">Order details are incomplete.</string>
    <string name="order_cancelled">The order has been cancelled.</string>
    <string name="cancel_order_failed">Failed to cancel the order.</string>
    <string name="update_order_failed">Failed to update the order status.</string>
    <string name="missing_information">Cannot update the order status due to missing information.</string>
    <string name="order_marked_finished">The order has been marked as finished.</string>
    <string name="cancel_confirmation_title">Cancel Confirmation</string>
    <string name="cancel_confirmation_message">Are you sure you want to cancel this order?</string>
    <string name="notification_title">Welcome to Plantique!</string>
    <string name="notification_content">We are happy to see you! Find your healthy food in Plantique</string>
    <string name="strCOD">Cash on delivery (COD)</string>
    <string name="strTransfer">Bank Account Transfer</string>
    <string name="strConfirm">Confirm</string>
    <string name="strConfirmOrd">Confirm Order</string>
    <string name="strApply">Apply</string>
    <string name="strPlaceOrder">Place Order</string>
    <string name="channel_name">Order Notifications</string>
    <string name="channel_description">Notifications for new orders</string>
    <string name="channel_id">order_channel</string>
    <string name="strBankAccNum">Account Number: 0366370098</string>
    <string name="strBank">Bank: MB Bank</string>
    <string name="strAccOwner">Account Owner: Le Chau Anh</string>
    <string name="strTransferContent">Transfer Content: Order Id + Phone Number</string>
    <string name="strTransferNote">Please make payment within 12 hours. After payment, orders will be processed and shipped within 24 hours. If your order is not shipped after 24 hours, please contact customer support for assistance.</string>
    <string name="strSelectPaymentMethod">Please select a payment method.</string>
    <string name="strAllFields">All fields are required.</string>
    <string name="strPhoneDigits">Phone number must be exactly 10 digits.</string>
    <string name="strEmailValid">Email is not valid.</string>
    <string name="strFailedProducts">Failed to load order details.</string>
    <string name="strOrderSuccess">Order Placed Successfully</string>
    <string name="strNotiOrder">You have successfully placed order</string>
    <string name="strOn">on</string>
    <string name="strCancelOrder">Cancel Order</string>
    <string name="strReceived">Recceived Order</string>
    <string name="strWriteReview">Write a review</string>
    <string name="strFailedLoadOrder">Failed to load orders:</string>
    <string name="strOrderHistory">Order History</string>
    <string name="strPromoDescrip">Promo Description</string>
    <string name="strWelcome1">Nice to meet you</string>
    <string name="strWelcome2">What are you looking for?</string>
    <string name="strTitleSale">SUMMER SALE OFF</string>
    <string name="strCate">Categories</string>
    <string name="strViewAll">View all</string>
    <string name="strHiglightedProducts">Higlighted Products</string>
    <string name="strHiglightedBlogs">Higlighted Blogs</string>
    <string name="strAboutUs">About Us</string>
    <string name="strIntro">Plantique was founded in 2024</string>
    <string name="strTitle1">100% natural</string>
    <string name="strTitle2">Has the best quality</string>
    <string name="strDesc1">Plantique was born with the desire to bring clean, 100% natural foods, no colors, no preservatives, no additives with the best nutritional quality produced directly in traditional craft villages across the world. country to customer. We wish to become a powerful arm supporting customers in health care, fitness, beauty and weight control. We listen and understand health wishes, thereby providing the best choice for customers in their daily healthy, clean eating life.</string>
    <string name="strDessc2">With the motto \"Eat clean - Live healthy\", Plantique respectfully brings customers the best quality eat clean food with 100% natural ingredients that are safe for all users.</string>
    <string name="strBuyNow">Buy Now</string>
    <string name="strHello">Hello</string>
    <string name="strBlog">Blog</string>
    <string name="strWhat">What are you looking for?</string>
    <string name="strSearch">Search</string>
    <string name="strCart">Cart</string>
    <string name="strUInfo">User Information</string>
    <string name="strUserName">User Name</string>
    <string name="strEmail">Email</string>
    <string name="strFName">Full Name</string>
    <string name="strAdd">Address</string>
    <string name="strPhoneNumber">Phone Number</string>
    <string name="strSave">Save</string>
    <string name="strChangePwd">Change Password</string>
    <string name="strLogOut">Log Out</string>
    <string name="strEdit">Edit</string>
    <string name="strDetail">Details</string>
    <string name="cart_empty_message">Your cart is empty!</string>
    <string name="quantity_blank_error_message">Quantity cannot be left blank</string>
    <string name="added_to_cart_message">Product added to cart</string>
    <string name="progress_dialog_title">Please wait</string>
    <string name="delete_success_message">Deleted...</string>
    <string name="delete_fail_message">Failed to delete</string>
    <string name="code_label">Code: %1$s</string>
    <string name="expire_date_label">Expire Date: %1$s</string>
    <string name="choose_option_title">Choose Option</string>
    <string name="deleting_promotion">Deleting Promotion Code...</string>
    <string name="please_wait_title">Please wait</string>
    <string name="title_required">Title is required...</string>
    <string name="category_required">Category is required...</string>
    <string name="price_required">Price is required...</string>
    <string name="discount_price_required">Discount Price is required...</string>
    <string name="adding_product">Adding Product...</string>
    <string name="category_not_found">Category not found!</string>
    <string name="product_added">Product added...</string>
    <string name="failed_to_add_product">Failed to add product: %s</string>
    <string name="error_message">Error: %s</string>
    <string name="product_added_failed">Product added failed...</string>
    <string name="dialog_title_product_category">Product Category</string>
    <string name="no_categories_found">No categories found!</string>
    <string name="categories_data_empty">Categories data is empty!</string>
    <string name="dialog_title_pick_image">Pick Image</string>
    <string name="permission_required_message">Camera &amp; Storage permissions are required...</string>
    <string name="storage_permission_required_message">Storage permission is required...</string>
    <string name="please_wait">Please wait</string>
    <string name="update_promotion_title">Update Promotion Code</string>
    <string name="add_promotion_title">Add Promotion Code</string>
    <string name="update_button">Update</string>
    <string name="add_button">Add</string>
    <string name="enter_discount_code">Enter discount code...</string>
    <string name="enter_promotion_description">Enter promotion description...</string>
    <string name="enter_promotion_price">Enter promotion price...</string>
    <string name="enter_minimum_order_price">Enter minimum order price...</string>
    <string name="choose_expired_date">Choose expired date...</string>
    <string name="updating_promotion">Updating Promotion Code...</string>
    <string name="promotion_updated">Updated...</string>
    <string name="promotion_update_failed">Update failed: %s</string>
    <string name="adding_promotion">Adding Promotion Code...</string>
    <string name="promotion_added_success">Promotion Code added successfully</string>
    <string name="failed_get_promo_id">Failed to get last promotion code ID</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="invalid_email_format">Invalid email format</string>
    <string name="invalid_password_format">Password must be at least 8 characters, contain a digit, and a special character</string>
    <string name="username_exists">Username already exists</string>
    <string name="email_exists">Email already exists</string>
    <string name="registration_successful">Registration successful</string>
    <string name="registration_failed">Register failed, please try again</string>
    <string name="database_error">Database error</string>
    <string name="hint_phone_number">Enter phone number</string>
    <string name="error_passwords_not_match">Passwords do not match</string>
    <string name="hint_confirm_password">Enter Confirm Password</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_password">Enter Password</string>
    <string name="hint_username">Enter Username</string>
    <string name="error_invalid_email">Invalid email format</string>
    <string name="error_invalid_password">Password must be at least 8 characters, contain a digit, and a special character</string>
    <string name="error_invalid_username">Username must contain both letters and numbers</string>
    <string name="failed_to_load_addresses">Failed to load addresses.</string>
    <string name="enter_otp_message">Please enter OTP</string>
    <string name="send_info_to_us">SEND INFORMATION TO US !</string>
    <string name="contact_us_for_queries">Contact us now to get answers to your questions and receive exciting offers!</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="content">Content</string>
    <string name="send_info">Send Information</string>
    <string name="strTitle3">Delivery</string>
    <string name="str_enter_OTP">Enter OTP</string>
    <string name="verify_OTP">Verify OTP</string>
    <string name="resend_OTP">Resend OTP</string>
</resources>