<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgbtnBack"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            app:srcCompat="@mipmap/ic_back" />

        <ImageView
            android:id="@+id/imgProductShow"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginRight="50dp"
            app:srcCompat="@drawable/logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="@string/strChangePwd"
        android:textAlignment="center"
        android:textColor="@color/main_green"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:text="@string/enter_otp_message"
        android:textAlignment="center"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/edtOTP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter"
        android:hint="@string/str_enter_OTP" />

    <Button
        android:id="@+id/btnVerifyOTP"
        android:layout_width="221dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/main_green"
        android:fontFamily="@font/inter_medium"
        android:text="@string/verify_OTP"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/resend_otp_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/inter"
        android:text="@string/resend_OTP" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>
