<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="16dp">

    <ImageView
        android:id="@+id/imageViewConfirm"
        android:layout_width="220dp"
        android:layout_height="228dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:src="@drawable/check1" />

    <TextView
        android:id="@+id/textViewConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/inter_bold"
        android:text="@string/strOrdConf"

        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewThank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/inter"
        android:text="@string/strOrdThank"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/txtOrderIdConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/strOrdID"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/main_green"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="221dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/main_green"
        android:fontFamily="@font/inter_medium"
        android:gravity="center"
        android:text="@string/strBackButton"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />


</LinearLayout>
