<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/strPaymentMethod"
            android:textColor="#040303"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:text="Quý khách chọn “ Tiến hành thanh toán” sau đó lựa chọn hình thức thanh toán phù hợp trong 2 phương thức sau:"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView112"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/strTransfer"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="Quý khách vui lòng ghi rõ nội dung thanh toán để Chúng tôi thực hiện được đúng yêu cầu của Quý khách."
            android:textSize="16sp" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="– Thời gian giao hàng không tính thứ bảy, chủ nhật hay các ngày lễ tết."
            android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/highlight_layout"
        android:layout_marginRight="40dp"
        android:elevation="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="match_parent"
            android:layout_height="353dp"
            android:src="@drawable/qr_code" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strBank"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strAccOwner"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strBankAccNum"
            android:textSize="20sp" />
    </LinearLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/strCOD"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="+ Đối với cách thanh toán khi nhận hàng, quý khách chỉ cần chọn thanh toán tiền mặt khi nhận hàng tại thời điểm thao tác đặt hàng trên website plantique.vn. Nhân viên giao hàng sẽ giao hàng và nhận tiền thanh toán trực tiếp từ quý khách."
            android:textSize="16sp" />


</LinearLayout>
</ScrollView>