<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".java.ContactActivity">

    <TextView
        android:id="@+id/definition_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="8dp"
        android:text="@string/send_info_to_us"
        android:textAlignment="center"
        android:textColor="@color/main_green"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/definition_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="26dp"
        android:layout_marginBottom="16dp"
        android:text="@string/contact_us_for_queries"
        android:textAlignment="viewStart"
        android:textColor="@color/textColor"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/main_green"
        app:boxStrokeWidth="2dp">

        <EditText
            android:id="@+id/edtFullname"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="26dp"
            android:hint="@string/full_name"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="401dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/main_green"
        app:boxStrokeWidth="2dp">

        <EditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="399dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:boxStrokeColor="@color/main_green"
        app:boxStrokeWidth="2dp">

        <EditText
            android:id="@+id/edtContent"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:layout_marginLeft="26dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="26dp"
            android:hint="@string/content"
            android:textColor="@color/textColor"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnConfirm"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"

        android:background="@drawable/button_fullgreen">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_info"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>