<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".java.BlogCategoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/strBlog"
            android:textColor="@color/main_green"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/inter"
                android:text="@string/strHello"
                android:textColor="@color/textColor"
                android:textSize="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:fontFamily="@font/inter"
                android:text="@string/strWhat"
                android:textColor="@color/textColor"
                android:textSize="13dp" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corner"
                android:iconifiedByDefault="false"
                android:queryHint="@string/strSearch"
                app:queryBackground="@null" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBlog"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/searchView"
                android:layout_marginTop="10dp"/>


        </LinearLayout>

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:elevation="2dp"
            app:backgroundTint="@color/white"
            app:itemIconSize="30dp"
            app:itemIconTint="@drawable/item_selector"
            app:itemRippleColor="@android:color/transparent"
            app:labelVisibilityMode="unlabeled"
            app:menu="@menu/bottom_menu"
            style="@style/BottomNavigationStyle"/>

    </RelativeLayout>

</LinearLayout>
